--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ exclude = '''
 '''
 
 [tool.isort]
-known_first_party = ["exportlib"]
+known_first_party = ["tsinfer"]
 known_third_party = ["numpy", "setuptools", "tritongrpcclient"]
 multi_line_output = 3
 include_trailing_comma = true
