--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,6 @@ exclude = '''
 
 [tool.isort]
 known_first_party = ["tsinfer"]
-known_third_party = ["attr", "numpy", "setuptools", "tritonclient"]
+known_third_party = ["attr", "multiiprocessing", "numpy", "setuptools", "tritonclient"]
 multi_line_output = 3
 include_trailing_comma = true
